[package]
name = "tokio-rdma"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
rdma-sys = "0.3"
libc = "0.2"
socket2 = "0.5"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]

anyhow = "1.0"

clap = { version = "4.5", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
